update: hover effects | paayos na lang yung hero section hahahaha

--- a/protective-measure/fire-suppresion-systems.html
+++ b/protective-measure/fire-suppresion-systems.html
@@ -326,6 +326,14 @@
 					<a href="#" class="text-sm">Fire Suppression System</a>
                 </div>
                 <h4 class="text-6xl font-medium text-center mt-20">Fire Suppression System</h4>
+                <div class="flex items-center space-x-6 text-gray-300">
+                    <a href="#overview">Overview</a><span>|</span>
+                    <a href="#detection">Identity Verification</a><span>|</span>
+                    <a href="#removal">Entry Logging</a><span>|</span>
+                    <a href="#management">Misuse Prevention</a><span>|</span>
+                    <a href="#practical">Practical Usage</a><span>|</span>
+                    <a href="#limitations">Limitations</a>
+                </div>
             </div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528]">
@@ -339,22 +347,22 @@
 				<div class="space-y-4">
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Early Fire Detection</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Smoke Detectors</h6>
 							<p class="">These detect the presence of smoke particles in the air, providing early warning before a fire escalates. This allows for quicker evacuation and response. Smoke detection is a foundational element of fire safety.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Heat Sensors</h6>
 							<p class="">These detect rapid increases in temperature to signal a potential fire outbreak. They are especially useful in areas where smoke may not be easily detectable. Early heat detection reduces response time.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Alarm Systems</h6>
 							<p class="">Once smoke or heat is detected, alarms alert occupants and emergency personnel. This ensures timely evacuation and minimizes casualties. Audible and visual alerts enhance awareness..</p>
 						</div>
 					</div>
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Suppression Mechanisms</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl"></h6>Sprinkler Systems</h6>
 							<p class="">These activate automatically upon detecting heat, releasing water to suppress flames. Sprinklers are highly effective in reducing fire spread. They are a standard in commercial and residential buildings.</p>
 						</div>
@@ -369,15 +377,15 @@
 					</div>
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Safety Integration</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Emergency Lighting</h6>
 							<p class="">These activate during fire emergencies to guide people to exits. Helps in low-visibility conditions like smoke-filled corridors. Emergency lights are battery-operated for reliability.p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Exit Signage</h6>
 							<p> Illuminated signs show the way to the nearest exits. They are critical for safe evacuation. Compliance with safety regulations requires clear signage.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Control Panels</h6>
 							<p>Centralized control panels allow monitoring and manual activation of suppression systems. They provide real-time data to responders. Efficient control systems speed up firefighting actions.</p>
 						</div>
