--- a/protective-measure/lokced-server-room.html
+++ b/protective-measure/lokced-server-room.html
@@ -324,8 +324,17 @@
                     <a href="physical-protective-measure.html" class="text-sm">Physical Protective Measures</a>
 					<span class="text-gray-300 text-sm">/</span>
 					<a href="#" class="text-sm">Locked Server Room</a>
+                    
                 </div>
                 <h4 class="text-6xl font-medium text-center mt-20">Locked Server Room</h4>
+                <div class="flex items-center space-x-6 text-gray-300">
+                    <a href="#overview">Overview</a><span>|</span>
+                    <a href="#detection">Identity Verification</a><span>|</span>
+                    <a href="#removal">Entry Logging</a><span>|</span>
+                    <a href="#management">Misuse Prevention</a><span>|</span>
+                    <a href="#practical">Practical Usage</a><span>|</span>
+                    <a href="#limitations">Limitations</a>
+                </div>
             </div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528]">
@@ -339,45 +348,45 @@
 				<div class="space-y-4">
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Restricts Unauthorized Access</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Physical Isolation</h6>
 							<p class="">Locked server rooms are physically separated from other office spaces, restricting access to only authorized personnel. This helps ensure that sensitive IT equipment and data remain protected from tampering or exposure. It acts as a basic but essential barrier against intrusions. </p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Access Logging  </h6>
 							<p class="">Entry to the room is tracked using keycard or PIN systems that log who enters and when. This helps maintain an audit trail that can be used to investigate suspicious activity. These logs are vital in maintaining accountability and traceability.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Incident Tracing</h6>
 							<p class="">If a security incident occurs, logs and access records help identify potential culprits. This improves the speed and accuracy of investigations. It also acts as a deterrent, since individuals know their entry is being recorded. </p>
 						</div>
 					</div>
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Reduces Risk of Tampering and Theft</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Hardware Protection</h6>
 							<p class="">Sensitive IT infrastructure like servers and network devices are stored securely behind locked doors. This reduces the risk of damage, unauthorized changes, or physical theft. The measure safeguards both data and hardware investments.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Controlled Entry</h6>
 							<p class=""> Access is restricted to select personnel, reducing the possibility of tampering from unqualified or malicious actors. This ensures only skilled IT staff can make modifications to the systems. Limiting physical access is a critical layer in multilayered security.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Financial Data Security</h6>
 							<p class="">In companies handling financial data, these rooms add another security layer for protecting customer and transaction information. A secured environment prevents unauthorized access to systems managing payment or identity data. It helps in meeting compliance standards like PCI</p>
 						</div>
 					</div>
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Enhances Environmental Security</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Climate Control</h6>
 							<p class="">Locked rooms often have air conditioning and humidity controls to preserve hardware. These environmental controls prevent overheating and moisture damage. This contributes to longer equipment lifespan and fewer hardware failures.<p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Dust and Debris Reduction</h6>
 							<p>Physical separation prevents accumulation of dust and contaminants that could harm hardware. It maintains a cleaner and more stable environment for the machines. Reduced exposure to external elements improves operational stability.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Reduced Accidental Damage</h6>
 							<p>Restricting entry to trained personnel prevents accidents by untrained users. This reduces the chances of accidental disconnection or damage. A controlled space ensures safety for both people and equipment.</p>
 						</div>
