--- a/protective-measure/motion-detectors.html
+++ b/protective-measure/motion-detectors.html
@@ -326,6 +326,14 @@
 					<a href="#" class="text-sm">Motion Detector</a>
                 </div>
                 <h4 class="text-6xl font-medium text-center mt-20">Motion Detector</h4>
+                <div class="flex items-center space-x-6 text-gray-300">
+                    <a href="#overview">Overview</a><span>|</span>
+                    <a href="#detection">Identity Verification</a><span>|</span>
+                    <a href="#removal">Entry Logging</a><span>|</span>
+                    <a href="#management">Misuse Prevention</a><span>|</span>
+                    <a href="#practical">Practical Usage</a><span>|</span>
+                    <a href="#limitations">Limitations</a>
+                </div>
             </div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528]">
@@ -339,45 +347,45 @@
 				<div class="space-y-4">
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Detection Technology</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Infrared Sensors</h6>
 							<p class="">Detect body heat emitted by intruders, triggering alarms. Operate efficiently in the dark. Common in homes and offices.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Microwave Sensors</h6>
 							<p class="">Emit and receive radio waves to detect movement through reflection changes. Cover larger areas than infrared. Suitable for outdoor and large indoor space.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Dual Technology</h6>
 							<p class="">Combines infrared and microwave to reduce false alarms. Ensures reliable detection under various conditions. Adds a verification layer.</p>
 						</div>
 					</div>
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Alarm Activation</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl"></h6>Sound Alarms</h6>
 							<p class="">Trigger loud sirens to alert nearby personnel. Deter intruders from proceeding. Encourage immediate response..</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Notification Systems</h6>
 							<p class=""> Send alerts via mobile apps or control centers. Enable real-time updates to security teams. Improves situational awareness</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Lighting Triggers</h6>
 							<p class="">Turn on floodlights or interior lights when motion is detected. Increases visibility of intruders. Supports camera footage quality.</p>
 						</div>
 					</div>
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Monitoring Integration</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">CCTV Connectivity</h6>
 							<p class="">Links to surveillance cameras for visual verification. Records the event for evidence. Reduces response time.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Access Control Synchronization</h6>
 							<p>Can lock doors or activate other systems upon motion detection. Provides layered security. Prevents unauthorized movement</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Remote Monitoring</h6>
 							<p>Allows off-site security staff to respond instantly. Enhances protection for large or multiple facilities. Supports 24/7 coverage.</p>
 						</div>
