--- a/protective-measure/multi-factor-authentication.html
+++ b/protective-measure/multi-factor-authentication.html
@@ -326,6 +326,14 @@
 					<a href="#" class="text-sm">Multi-Factor Authentication</a>
                 </div>
                 <h4 class="text-6xl font-medium text-center mt-20">Multi-Factor Authentication</h4>
+                <div class="flex items-center space-x-6 text-gray-300">
+                    <a href="#overview">Overview</a><span>|</span>
+                    <a href="#detection">Identity Verification</a><span>|</span>
+                    <a href="#removal">Entry Logging</a><span>|</span>
+                    <a href="#management">Misuse Prevention</a><span>|</span>
+                    <a href="#practical">Practical Usage</a><span>|</span>
+                    <a href="#limitations">Limitations</a>
+                </div>
             </div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528]">
@@ -339,15 +347,15 @@
 				<div class="space-y-4">
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Corporate Systems</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">VPN Access Protection</h6>
 							<p class="">Companies add MFA to VPN logins to prevent unauthorized access. Ensures employees authenticate using a second factor before accessing internal networks. Enhances data protection in hybrid or remote work setups.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Admin Console Access</h6>
 							<p class="">MFA is applied when accessing cloud or network admin panels. Protects critical infrastructure and sensitive configurations. Especially important for IT administrators.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">System Logins</h6>
 							<p class="">Workstations and servers require MFA for user logins. Ensures verified access and discourages internal breaches. Supports compliance with security regulation</p>
 						</div>
@@ -355,15 +363,15 @@
 
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">E-commerce and Online Banking</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Payment Confirmations</h6>
 							<p>Banking apps require MFA when making large transactions. Prevents fraud even if account credentials are compromised. Builds customer trust.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Account Changes</h6>
 							<p>Changes to email, password, or phone number require second-step verification. Prevents hijacking attempts. Adds safety to profile modifications.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">New Device Logins</h6>
 							<p>New device detection triggers MFA steps. Prevents unauthorized logins from unknown hardware. Often used in both shopping platforms and banking apps.</p>
 						</div>
@@ -371,15 +379,15 @@
 
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Personal Accounts</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Social Media Security</h6>
 							<p>Users activate MFA to prevent account hijacking. A code or approval is needed when logging in from new browsers. Increases personal data privacy.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Cloud Storage Access</h6>
 							<p>Google Drive, iCloud, and Dropbox all support MFA. Prevents unauthorized access to files and documents. Crucial for users storing sensitive content.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Gaming Accounts</h6>
 							<p>Services like Steam or Xbox offer MFA for account protection. Prevents unauthorized in-game purchases or data theft. Popular among competitive or high-value users.</p>
 						</div>
