--- a/protective-measure/physical-protective-measure.html
+++ b/protective-measure/physical-protective-measure.html
@@ -340,7 +340,7 @@
 
 		
 		<!-- Content -->
-        <div class="">
+        <div class="md:px-2 px-4">
 			<div class="grid md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-y-8 max-w-6xl mx-auto py-16 gap-4">
 
 				<div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
