--- a/protective-measure/secure-networks.html
+++ b/protective-measure/secure-networks.html
@@ -326,6 +326,14 @@
 					<a href="#" class="text-sm">Secure Networks</a>
                 </div>
                 <h4 class="text-6xl font-medium text-center mt-20">Secure Networks</h4>
+                <div class="flex items-center space-x-6 text-gray-300">
+                    <a href="#overview">Overview</a><span>|</span>
+                    <a href="#detection">Identity Verification</a><span>|</span>
+                    <a href="#removal">Entry Logging</a><span>|</span>
+                    <a href="#management">Misuse Prevention</a><span>|</span>
+                    <a href="#practical">Practical Usage</a><span>|</span>
+                    <a href="#limitations">Limitations</a>
+                </div>
             </div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528]">
@@ -339,15 +347,15 @@
 				<div class="space-y-4">
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Encrypted Communications</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">VPN Tunnels</h6>
 							<p>Create a private and encrypted channel over the public internet. Used in both business and individual settings. Prevents hackers from intercepting data.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">SSL/TLS Protocols</h6>
 							<p>Encrypts browser-server communication (HTTPS). Prevents man-in-the-middle attacks and maintains data integrity. Used in secure online shopping and banking.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Email Encryption</h6>
 							<p>Encrypts messages to protect sensitive information. Requires secure email platforms or plugins. Helps prevent leaks of personal or corporate data.</p>
 						</div>
@@ -355,15 +363,15 @@
 
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Network Segmentation</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">VLAN Configuration</h6>
 							<p>Divides a physical network into multiple virtual ones. Isolates sensitive traffic like HR or Finance from general users. Simplifies security management.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Firewall Between Segments</h6>
 							<p>Each segment has its own firewall rules. Blocks lateral movement if one area is breached. Enhances internal threat protection.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Guest Network Setup</h6>
 							<p>Separate network for visitors and non-authorized users. Prevents access to the internal systems. Common in cafes, schools, and corporate lobbies.</p>
 						</div>
