--- a/protective-measure/security-guard.html
+++ b/protective-measure/security-guard.html
@@ -325,6 +325,14 @@
 					<a href="#" class="text-sm">Security Guard</a>
                 </div>
                 <h4 class="text-6xl font-medium text-center mt-20">Security Guard</h4>
+                <div class="flex items-center space-x-6 text-gray-300">
+                    <a href="#overview">Overview</a><span>|</span>
+                    <a href="#detection">Identity Verification</a><span>|</span>
+                    <a href="#removal">Entry Logging</a><span>|</span>
+                    <a href="#management">Misuse Prevention</a><span>|</span>
+                    <a href="#practical">Practical Usage</a><span>|</span>
+                    <a href="#limitations">Limitations</a>
+                </div>
             </div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528]">
@@ -338,30 +346,30 @@
 				<div class="space-y-4">
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Visual Deterrence</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Uniformed Presence</h6>
 							<p class="">The sight of a uniformed security guard immediately signals authority and surveillance, making potential offenders think twice before acting. This visual cue strongly discourages illicit behavior.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Patrolling Activities</h6>
 							<p class="">Guards actively patrolling an area create a dynamic and visible security presence. This constant movement reinforces the idea that the area is being actively monitored, deterring potential threats.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Strategic Positioning at Entry Points</h6>
 							<p class="">Stationing guards at entrances and exits provides a clear visual indication that access is controlled and monitored. This visible checkpoint discourages unauthorized entry and potential security breaches.</p>
 						</div>
 					</div>
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Immediate Response</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Direct Intervention in Threats</h6>
 							<p class="">When a guard detects a potential threat, such as a physical altercation or suspicious behavior, they can immediately intervene to de-escalate the situation or prevent further harm.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Initiating Emergency Protocols</h6>
 							<p class=""> In the event of an emergency like a fire or a medical incident, guards are trained to immediately initiate established safety protocols, such as contacting emergency services or guiding evacuations.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Apprehending Unauthorized Individuals</h6>
 							<p class="">If a guard identifies an unauthorized person attempting to gain access or engaging in illegal activity, they can immediately take action to detain the individual according to their training and protocols.</p>
 						</div>
