--- a/protective-measure/surveillance-cameras.html
+++ b/protective-measure/surveillance-cameras.html
@@ -325,6 +325,14 @@
 					<a href="#" class="text-sm">Surveillance Camera</a>
                 </div>
                 <h4 class="text-6xl font-medium text-center mt-20">Surveillance Camera</h4>
+                <div class="flex items-center space-x-6 text-gray-300">
+                    <a href="#overview">Overview</a><span>|</span>
+                    <a href="#detection">Identity Verification</a><span>|</span>
+                    <a href="#removal">Entry Logging</a><span>|</span>
+                    <a href="#management">Misuse Prevention</a><span>|</span>
+                    <a href="#practical">Practical Usage</a><span>|</span>
+                    <a href="#limitations">Limitations</a>
+                </div>
             </div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528]">
@@ -338,30 +346,30 @@
 				<div class="space-y-4">
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Enhanced Security & Crime Prevention</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Access Control Monitoring</h6>
 							<p class="">Surveillance cameras play a vital role in overseeing daily operations within critical infrastructure facilities. They help ensure that employees adhere to safety protocols and standard operating procedures. </p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Enhanced Situational Awareness & Incident Response</h6>
 							<p class="">Surveillance cameras greatly enhance situational awareness by providing real-time visual data for security teams. This constant information flow enables the immediate detection of anomalies and potential threats.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Remote Monitoring & Centralized Management</h6>
 							<p class="">Modern surveillance systems enable remote access to live and recorded footage from any location, benefiting multi-site organizations and after-hours monitoring. </p>
 						</div>
 					</div>
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Operational Oversight & Emergency Response</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Enhancing Operational Efficiency Through Surveillance</h6>
 							<p class="">Surveillance cameras help ensure adherence to safety protocols and optimize workflow efficiency in critical infrastructure facilities</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Rapid Emergency Response and Situational Awareness</h6>
 							<p class="">Real-time surveillance footage aids in swift incident assessment and tailored response strategies, minimizing damage and harm.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Strengthening Access Control and Security Measures
 </h6>
 							<p class="">Surveillance systems monitor and record entry and exit activities, ensuring only authorized personnel access sensitive areas.</p>
@@ -369,16 +377,16 @@
 					</div>
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Cost-Effectiveness & Regulatory Compliance</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Scalability in Surveillance Deployment
 </h6>
 							<p class="">Implementing surveillance systems reduces the need for extensive physical security personnel, lowering operational costs while remaining adaptable to evolving security demands.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Audit Support Through Surveillance</h6>
 							<p>Recorded footage serves as documented evidence of adherence to security protocols, aiding facilities in maintaining certifications and avoiding penalties.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Addressing Privacy and Technological Challenges in Surveillance</h6>
 							<p>Keeps virus definitions up to date. Responds quickly to new threats. Ensures software remains effective.Ethical considerations, cyber threats, and system maintenance must be managed to ensure effective and responsible use of surveillance technology</p>
 						</div>
