--- a/protective-measure/update-programs-and-systems-regularly.html
+++ b/protective-measure/update-programs-and-systems-regularly.html
@@ -326,6 +326,14 @@
 					<a href="#" class="text-sm">Update Programs and Systems Regularly</a>
                 </div>
                 <h4 class="text-6xl font-medium text-center mt-20">Updates Programs and Systems Regularly</h4>
+                <div class="flex items-center space-x-6 text-gray-300">
+                    <a href="#overview">Overview</a><span>|</span>
+                    <a href="#detection">Identity Verification</a><span>|</span>
+                    <a href="#removal">Entry Logging</a><span>|</span>
+                    <a href="#management">Misuse Prevention</a><span>|</span>
+                    <a href="#practical">Practical Usage</a><span>|</span>
+                    <a href="#limitations">Limitations</a>
+                </div>
             </div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528]">
@@ -339,15 +347,15 @@
 				<div class="space-y-4">
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Security Patches</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">OS Security Updates</h6>
 							<p>Operating systems release regular patches to fix known vulnerabilities. Prevents exploitation through privilege escalation or remote code execution. Critical for systems like Windows, macOS, and Linux.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Application Patch Management</h6>
 							<p>Common software like browsers, document readers, or office tools are patched for security holes. Regular updates help prevent exploits like drive-by downloads or scripting attacks.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Firmware Updates</h6>
 							<p>Devices like routers, firewalls, and IoT systems need updated firmware to fix kernel-level bugs. Often overlooked but crucial for system-level integrity.</p>
 						</div>
@@ -355,15 +363,15 @@
 
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Network Segmentation</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">VLAN Configuration</h6>
 							<p>Divides a physical network into multiple virtual ones. Isolates sensitive traffic like HR or Finance from general users. Simplifies security management.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Firewall Between Segments</h6>
 							<p>Each segment has its own firewall rules. Blocks lateral movement if one area is breached. Enhances internal threat protection.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Guest Network Setup</h6>
 							<p>Separate network for visitors and non-authorized users. Prevents access to the internal systems. Common in cafes, schools, and corporate lobbies.</p>
 						</div>
@@ -371,15 +379,15 @@
 
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Automatic Update Services</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Operating System Update</h6>
 							<p>Built-in services to automatically deliver and apply updates. Reduces dependency on user action. Prevents delays in fixing known issues.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Mobile Phone Auto Update</h6>
 							<p>Keeps mobile devices protected from mobile-specific malware. Ensures apps and OS are using the latest security policies.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Third-party Auto-Updaters</h6>
 							<p>Some applications maintain their own update mechanisms. Minimizes user effort and improves compliance.</p>
 						</div>
@@ -387,15 +395,15 @@
 
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Update Management System</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Windows Server Update Services</h6>
 							<p>Centralized tool for IT admins to manage Windows updates across enterprise environments. Enables testing, approval, and rollout of updates.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Linux Package Manager</h6>
 							<p>Regular system updates are managed through repositories. Command-line tools allow automation and logging.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Patch Management Platforms</h6>
 							<p>Enterprise-grade tools that inventory devices, assess vulnerabilities, and schedule updates across systems.</p>
 						</div>
