--- a/protective-measure/encryption.html
+++ b/protective-measure/encryption.html
@@ -323,8 +323,17 @@
                     <a href="software-protective-measures.html" class="text-sm">Software Protective Measures</a>
 					<span class="text-gray-300 text-sm">/</span>
 					<a href="#" class="text-sm">Data Encryption</a>
+                    
                 </div>
                 <h4 class="text-6xl font-medium text-center mt-20">Data Encryption</h4>
+                <div class="flex items-center space-x-6 text-gray-300">
+                    <a href="#overview">Overview</a><span>|</span>
+                    <a href="#detection">Identity Verification</a><span>|</span>
+                    <a href="#removal">Entry Logging</a><span>|</span>
+                    <a href="#management">Misuse Prevention</a><span>|</span>
+                    <a href="#practical">Practical Usage</a><span>|</span>
+                    <a href="#limitations">Limitations</a>
+                </div>
             </div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528]">
@@ -338,45 +347,45 @@
 				<div class="space-y-4">
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Data Encryption at Rest</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Full Disk Encryption</h6>
 							<p>Protects the entire contents of a disk (e.g., BitLocker, FileVault). Prevents data access if a device is lost or stolen. Common in laptops and mobile devices.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Database Encryption</h6>
 							<p>Encrypts database fields or entire databases (e.g., MySQL TDE, Oracle Transparent Data Encryption). Protects stored customer data and personal records.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Cloud Storage Encryption</h6>
 							<p>Cloud services encrypt stored files (e.g., Google Drive, Dropbox). Usually paired with server-side encryption and user-specific access controls.</p>
 						</div>
 					</div>
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Data Encryption in Transit</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">TLS/SSL Protocols</h6>
 							<p>Encrypt data transmitted between web browsers and servers (HTTPS). Secures login credentials, online forms, and financial transactions.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">VPN Encryption</h6>
 							<p>Virtual Private Networks use encryption to tunnel traffic securely over public networks. Protects remote users and sensitive corporate data.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Email Encryption</h6>
 							<p>Encrypts email content and attachments. Ensures messages are readable only by intended recipients. Used in business and legal communication.</p>
 						</div>
 					</div>
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">End-to-End Encryption</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Messaging Apps</h6>
 							<p>Messages are encrypted on the sender's device and decrypted only on the recipient’s. Prevents access even by the service provider.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">File-Sharing Tools</h6>
 							<p>End-to-end encrypted storage and file sharing. Ensures only users with decryption keys can view content.</p>
 						</div>
-						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Zero-Knowledge Encryption</h6>
 							<p>Providers have no access to encryption keys or content (e.g., MEGA, ProtonMail). Enhances privacy by design.</p>
 						</div>
