--- a/protective-measure/software-protective-measures.html
+++ b/protective-measure/software-protective-measures.html
@@ -316,7 +316,7 @@
                 <!-- END OF SIDE BAR -->
             </nav>
 
-			<div class="grid md:grid-cols-2 grid-cols-1 max-w-7xl mx-auto mt-8">
+			<div class="grid md:grid-cols-2 grid-cols-1 max-w-6xl mx-auto mt-8 pt-10">
 				<div class="flex items-center justify-center">
                     <div class="block px-4">
                         <h4 class="text-6xl font-medium ">Software <span class="text-[#6366F1]">Protective Measures</span></h4>
@@ -332,10 +332,10 @@
 
 		
 		<!-- Content -->
-        <div class="">
+        <div class="md:px-2 px-4">
 			<div class="grid md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-y-8 max-w-6xl mx-auto py-16 gap-4">
 
-				<div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+				<div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 					<img src="../assets/antivirus-software.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Antivirus Software</h5>
@@ -347,7 +347,7 @@
 					</div>
 				</div>
 
-                <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+                <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 					<img src="../assets/encryption.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Encryption</h5>
@@ -359,7 +359,7 @@
 					</div>
 				</div>
 
-                <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+                <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 					<img src="../assets/authentication.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Multi Factor Authentication</h5>
@@ -371,7 +371,7 @@
 					</div>
 				</div>
 
-                <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+                <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 					<img src="../assets/firewall.webp" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Firewall</h5>
@@ -384,7 +384,7 @@
 					</div>
 				</div>
 
-                <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+                <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 					<img src="../assets/firewall.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Secure Network</h5>
@@ -396,7 +396,7 @@
 					</div>
 				</div>
 
-                <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+                <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 					<img src="../assets/update.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Update Programs and Systems Regularly</h5>
